--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="row">
             <nav class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">faço parte de um time de basquete </a>
+                    <a class="nav-link" href="#basquete">faço parte de um time de basquete </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">treino capoeira </a>
@@ -32,6 +32,12 @@
         <div class="row">
             <div class="col d-flex justify-content-center">
                 <img class="img-fluid" src="imgs/perfil.jpg" width="30%" alt="perfil">
+            </div>
+        </div>
+        <div class="row" id="basquete">
+            <div class="col">
+                <p>Dede pequeno meu tio me colocva para ver os jogos de um jogador de basquete chamado kobe bryant, e ele sempre me colocando pra ver o jogos eu comecei a gostar muito do jogo. 
+                  mais na epoca eu jogava football e eu demorei pra realmente começar a jogar, fi apenas em 2018 que dps de assistir um filme chamado coach carter treino para a vida que eu comecei a jogar, eu sempre ia em um parque chamado pelezão para jogar    </p>
             </div>
         </div>
         <div class="row">
