--- a/index.html
+++ b/index.html
@@ -36,13 +36,19 @@
         </div>
         <div class="row" id="basquete">
             <div class="col">
-                <p>Dede pequeno meu tio me colocva para ver os jogos de um jogador de basquete chamado kobe bryant, e ele sempre me colocando pra ver o jogos eu comecei a gostar muito do jogo. 
+                <p>Desde pequeno meu tio me colocva para ver os jogos de um jogador de basquete chamado kobe bryant, e ele sempre me colocando pra ver o jogos eu comecei a gostar muito do jogo. 
                   mais na epoca eu jogava football e eu demorei pra realmente começar a jogar, fi apenas em 2018 que dps de assistir um filme chamado coach carter treino para a vida que eu comecei a jogar, eu sempre ia em um parque chamado pelezão para jogar    </p>
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="capoeira">
             <div class="col">
-                
+                desde de pequeno eu treino no mesmo grupo chamao Lamba di le onde o criador e atual mestre chama-se mestre gué
+                    Mais como ele ja esta com uma idade avançada atualmente quem da aula é o professor santana,por causa da pandemia estamos com poucos alunos, e muitas vezes apenas eu estava la treinando.
+                    <div class=""></div> 
+                    <div class="row" id="UFC">
+                        
+                        Quando eu era pequeo eu vi uma luta que me fez gostar desse esprte que ser o UFC, a luta era do Anderson Silva VS Vitor Belfort, autualmente meu lutador preferido se chama adesanya 
+                </p>
             </div>
         </div>
     </div>
