--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <div class="row">
             <nav class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#basquete">faço parte de um time de basquete </a>
+                    <a class="nav-link" href="#basquete">Faço parte de um time de basquete </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">treino capoeira </a>
+                    <a class="nav-link" href="#">Treino Capoeira </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">estudo no colegio modulo</a>
+                    <a class="nav-link" href="#">Estudo no Colégio Módulo</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">assisto UFC</a>
+                    <a class="nav-link" href="#">Assisto UFC</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">gosto de rap</a>
+                    <a class="nav-link" href="#">Gosto de Rap</a>
                 </li>
             </nav>
         </div>
@@ -34,15 +34,15 @@
                 <img class="img-fluid" src="imgs/perfil.jpg" width="30%" alt="perfil">
             </div>
         </div>
-        <div class="row" id="basquete">
+        <div class="row" id="Basquete">
             <div class="col">
-                <p>Desde pequeno meu tio me colocva para ver os jogos de um jogador de basquete chamado kobe bryant, e ele sempre me colocando pra ver o jogos eu comecei a gostar muito do jogo. 
-                  mais na epoca eu jogava football e eu demorei pra realmente começar a jogar, fi apenas em 2018 que dps de assistir um filme chamado coach carter treino para a vida que eu comecei a jogar, eu sempre ia em um parque chamado pelezão para jogar    </p>
+                <p>Desde pequeno meu tio me colocva para ver os jogos de um jogador de basquete chamado Kobe Bryant, e ele sempre me colocando pra ver o jogos eu comecei a gostar muito do jogo. 
+                  mais na epoca eu jogava futebol e eu demorei pra realmente começar a jogar, foi apenas em 2018 que depois de assistir um filme chamado Coach Carter treino para a vida que eu comecei a jogar, eu sempre ia em um parque chamado Pelezão para jogar    </p>
             </div>
         </div>
-        <div class="row" id="capoeira">
+        <div class="row" id="Capoeira">
             <div class="col">
-                desde de pequeno eu treino no mesmo grupo chamao Lamba di le onde o criador e atual mestre chama-se mestre gué
+                Desde de pequeno eu treino no mesmo grupo chamao Lamba di le onde o criador e atual mestre chama-se mestre gué
                     Mais como ele ja esta com uma idade avançada atualmente quem da aula é o professor santana,por causa da pandemia estamos com poucos alunos, e muitas vezes apenas eu estava la treinando.
                     <div class=""></div> 
                     <div class="row" id="UFC">
